CR-2002-12-02-2  Testsuite: a) test job_environment:
                               report only warning for JOB_NAME bug if version
                               is <= 5.3p2
                            b) removed qrsh_trap test from qrsh test

CR-2002-12-02-1  Testsuite: a) setting default configuration max_unheard to
                               00:01:00
                            b) new procedure: soft_execd_shutdown() 

CR-2002-12-02-0  Testsuite: a) Removed unused, duplicate message macro from 
                               source
                            b) Removed wait_for_enter() call in submit_del test
                               after pass2 (blocked automatic testsuite run)

CR-2002-11-29-1  Testsuite: L10N bugfixes

CR-2002-11-29-0  Testsuite: a) using testsuite root directory for lockfile, not
                 Bugfix:       testsuite results directory.
                            b) get_version_info() may not reset 
                               install_core_system
                               test if version is not ascertainable.

CR-2002-11-28-2  Cleanup:   un-commented message macros not used in source code
                 L10N:

CR-2002-11-28-1  Testsuite: added code to un-comment unused message macros
                            ( code itself is also un-commented in procedure
                              check_c_source_code_files_for_macros() )

CR-2002-11-27-3  Cleanup:   a) removed/corrected duplicate message ids
                 Testsuite: b) handle_vi_edit() procedure reports now an error
                               if no expected parameter string matches the 
                               output of vi.

CR-2002-11-27-2  Testsuite: removed hostname parameter in translate call. Using
                 Bugfix:    asterisk "*" instead. Now long hostnames will not
                 L10N:      influent string parsing anymore.

CR-2002-11-27-1  Testsuite: a) submit_del check: debug modifications